[gd_scene load_steps=7 format=3 uid="uid://d4hu7mopo2lts"]

[ext_resource type="Texture2D" uid="uid://cv8lwnqvxifr8" path="res://sprites/blank_card.svg" id="1_3i5bc"]
[ext_resource type="Script" path="res://scenes/config_deck/config_deck.gd" id="1_xnd66"]
[ext_resource type="Texture2D" uid="uid://b6vl0eqmner2f" path="res://sprites/arrow_left.svg" id="3_c7mlf"]
[ext_resource type="Texture2D" uid="uid://03titiofygao" path="res://sprites/plus_text.svg" id="3_dvmiq"]
[ext_resource type="Texture2D" uid="uid://bdktkmddnkmf0" path="res://sprites/plus_card.svg" id="4_hosud"]
[ext_resource type="Texture2D" uid="uid://cjoyw6qre8k4a" path="res://sprites/flip_card.svg" id="6_ux0il"]

[node name="ConfigDeck" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_xnd66")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Container" type="VBoxContainer" parent="Container/LeftContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubjectContainer" type="HBoxContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/LeftContainer/Container/SubjectContainer"]
layout_mode = 2
text = "Subject: "

[node name="LineEdit" type="LineEdit" parent="Container/LeftContainer/Container/SubjectContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AliasesContainer" type="VBoxContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2

[node name="AliasesMenu" type="MarginContainer" parent="Container/LeftContainer/Container/AliasesContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Container/LeftContainer/Container/AliasesContainer/AliasesMenu"]
layout_mode = 2
size_flags_horizontal = 2
text = "Aliases"
horizontal_alignment = 1

[node name="AliasesOptions" type="VBoxContainer" parent="Container/LeftContainer/Container/AliasesContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Container/LeftContainer/Container"]
layout_mode = 2

[node name="CardsContainer" type="VBoxContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndContainer" type="MarginContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Container/LeftContainer/Container/EndContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/LeftContainer/Container/EndContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("3_c7mlf")
flat = true

[node name="Button2" type="Button" parent="Container/LeftContainer/Container/EndContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("3_dvmiq")
flat = true

[node name="Button3" type="Button" parent="Container/LeftContainer/Container/EndContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_hosud")
flat = true

[node name="RightContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="CenterContainer" parent="Container/RightContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlankCard" type="TextureRect" parent="Container/RightContainer/Container"]
layout_mode = 2
texture = ExtResource("1_3i5bc")
stretch_mode = 2

[node name="Container" type="MarginContainer" parent="Container/RightContainer/Container/BlankCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Image" type="TextureRect" parent="Container/RightContainer/Container/BlankCard/Container"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="Container" type="VBoxContainer" parent="Container/RightContainer/Container/BlankCard/Container/Image"]
layout_mode = 2
offset_right = 288.0
offset_bottom = 438.0

[node name="Question" type="Label" parent="Container/RightContainer/Container/BlankCard/Container/Image/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "What is your question?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Flip" type="Button" parent="Container/RightContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
toggle_mode = true
icon = ExtResource("6_ux0il")
flat = true

[connection signal="pressed" from="Container/LeftContainer/Container/EndContainer/HBoxContainer/Button" to="." method="go_to_menu"]
[connection signal="pressed" from="Container/LeftContainer/Container/EndContainer/HBoxContainer/Button2" to="." method="add_new_alias"]
[connection signal="pressed" from="Container/LeftContainer/Container/EndContainer/HBoxContainer/Button3" to="." method="add_new_card"]
[connection signal="toggled" from="Container/RightContainer/Flip" to="." method="flip_card"]
